# supercell

./: ..env.swp  .dockerignore  .env.save  .gitignore  .pre-commit-config.yaml  README.md  clean_git.sh  docker-compose.yml  pyproject.toml  todo_list.md
admin_frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
admin_frontend/nginx/: default.conf.template
admin_frontend/src/: App.tsx  index.css
admin_frontend/src/context/: LanguageContext.ts
backend/: Dockerfile  README.md  celery_app.py  requirements.txt
backend/api/: authentication.py  examples.py  pagination.py  permissions.py  private_urls.py  serializers.py  signals.py  spectacular_hooks.py  urls.py  views.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  exceptions.py  models.py  permissions.py  tasks.py  utils.py
backend/supercell_auth/: logging.py  login.py  mobile_app.py
bot/: ecosystem.config.js  main.py  users.json
customer_bot/: Dockerfile  create_bot.py
customer_bot/customer_api/: client.py  exceptions.py  http_client.py
customer_bot/src/: states.py  utils.py
customer_bot_test/: Dockerfile  create_bot.py
customer_bot_test/customer_api/: client.py
customer_bot_test/src/: callback_factories.py  external.py  filters.py  keyboards.py
nginx/: default.conf.template
order_bot/: Dockerfile  main.py  requirements.txt
seller_bot/: Dockerfile  bot.py  create_bot.py  requirements.txt
seller_bot/seller_api/: client.py  exceptions.py  http_client.py  schemas.py
seller_bot/src/: callback_factories.py  enums.py  setup.py
webapp_frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  test.tsx  todo
webapp_frontend_test_8/: README.md  next.config.mjs  package-lock.json
(+351 files in other folders)
