[tool.poetry]
name = "davdam"
version = "0.1.0"
description = ""
authors = ["Satyuel <stockmann89@mail.ru>"]
readme = "README.md"
packages = [{include = "davdam"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-oscar = {extras = ["sorl-thumbnail"], version = "3.2.4"}
django-oscar-api = "^3.2.4"
pillow = "^10.1.0"
drf-spectacular = "^0.26.5"
aiogram = "^3.1.1"
python-dotenv = "^1.0.0"
psycopg = "^3.1.12"
django-cors-headers = "^4.3.1"
djangorestframework-simplejwt = "^5.3.1"
httpx = "^0.26.0"
pydantic-settings = "^2.1.0"
sentry-sdk = {extras = ["django"], version = "^1.39.2"}
django-filter = "^23.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
celery = "^5.3.6"
redis = "^5.0.1"
yookassa = "^3.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"
pre-commit = "^3.5.0"
pycountry = "^22.3.5"

[tool.ruff.per-file-ignores]
"backend/config/settings.py" = ["E501"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
